--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kosar501/Mexc-api-php",
+    "name": "kosar501/mexc-api-php",
     "type": "library",
     "description": "Implementation of mexc exchange php api",
     "license": "MIT",
